feat(entitlements): 添加自定义 entitlements 文件支持
新增功能允许用户选择自定义 entitlements 文件，在签名过程中合并到 provisioning profile 的 entitlements 中
- 添加菜单项和文件选择对话框来选择 entitlements 文件
- 支持拖放 plist/json 文件到应用窗口
- 实现 entitlements 合并逻辑
- 添加示例文件和详细使用文档

--- a/AppSigner/Application.xib
+++ b/AppSigner/Application.xib
@@ -107,6 +107,12 @@
                                     <action selector="viewLog:" target="aMe-uV-AHx" id="jXh-hs-BpO"/>
                                 </connections>
                             </menuItem>
+                            <menuItem title="Choose Custom Entitlements..." id="cus-ent-menu">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="chooseCustomEntitlements:" target="aMe-uV-AHx" id="cus-ent-action"/>
+                                </connections>
+                            </menuItem>
                         </items>
                     </menu>
                 </menuItem>
